[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodi-libs"
dynamic = ["version"]
description = "Internal utility libraries collection"
requires-python = ">=3.9"

[tool.hatch.version]
path = "src/nodi_libs/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nodi_libs"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
